# thesis_backup

./: .gitignore  CMakeLists.txt  conanfile.txt
include/glad/: glad.h
include/imgui/: CMakeLists.txt
resources/ies/: TEST.IES
resources/shaders/: base.frag  base.vert  depth.frag  depth.vert  depth_mask.frag  depth_mask.geom  depth_mask.vert  point_sm.frag  point_sm.gs  rsm.frag  rsm.geom  rsm.vert  rsm_render.frag  shadowmapped.frag  shadowmapped.vert  shadowmapped_no_indirect.frag  shadowmapped_no_indirect.vert  wireframe.frag  wireframe.vert
resources/shaders/deferred/: deferred_direct.frag  deferred_indirect.frag  gbuffer_creation.frag  gbuffer_creation.vert  ies_mask_creation.frag  quad_rendering.frag  quad_rendering.vert  rsm_creation.frag  rsm_creation.geom  rsm_creation.vert  sum_quad_rendering.frag  wireframe.frag  wireframe_to_gbuffer.frag
src/: CMakeLists.txt  application.cpp  application.h  box_app.cpp  box_app.h  glad.c  main.cpp
src/engine/: CMakeLists.txt
src/engine/events/: CMakeLists.txt  event.cpp  event.h  keyboard_events.cpp  keyboard_events.h  mouse_events.cpp  mouse_events.h  scene_event.cpp  scene_event.h  scene_events.cpp  scene_events.h  window_events.cpp  window_events.h
src/engine/layers/: CMakeLists.txt  imgui_layer.cpp  imgui_layer.h  layer.h  layer_container.cpp  layer_container.h
src/engine/layers/box_layers/: CMakeLists.txt  camera_layer.cpp  camera_layer.h  deferred_layer.cpp  deferred_layer.h  scene_layer.cpp  scene_layer.h
src/engine/rendering/: CMakeLists.txt  camera.cpp  camera.h  element_buffer.h  fly_camera.cpp  fly_camera.h  glfw_window_impl.cpp  glfw_window_impl.h  material.cpp  material.h  opengl3_context.cpp  opengl3_context.h  opengl3_cubemap.cpp  opengl3_cubemap.h  opengl3_framebuffer.cpp  opengl3_framebuffer.h  opengl3_texture.cpp  opengl3_texture.h  renderer.cpp  renderer.h  rendering_context.cpp  rendering_context.h  shader.cpp  shader.h  shader_loading.cpp  shader_loading.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
src/engine/scene_management/: CMakeLists.txt  light.cpp  light.h  point_light.cpp  point_light.h  scene_loading.cpp  scene_loading.h  scene_object.cpp  scene_object.h  spotlight.cpp  spotlight.h
src/ies/: CMakeLists.txt  ies_data.cpp  ies_data.h  ies_default_parser.cpp  ies_default_parser.h  ies_document.cpp  ies_document.h  ies_label_data.cpp  ies_label_data.h  ies_parser.h  ies_parsing.h  ies_parsing_chain.h  ies_printing.h
src/ies/adapter/: CMakeLists.txt  ies_mesh.cpp  ies_mesh.h  ies_mesh_adapter.cpp  ies_mesh_adapter.h  ies_mesh_type_specific_adapter.cpp  ies_mesh_type_specific_adapter.h  mesh_interpolation.cpp  mesh_interpolation.h
src/ies/parser_impl/: CMakeLists.txt  common_ies_parser_impl.cpp  common_ies_parser_impl.h  common_string_view_manipulation.cpp  common_string_view_manipulation.h  ies02_parser_impl.cpp  ies02_parser_impl.h  ies86_parser_impl.cpp  ies86_parser_impl.h  ies91_parser_impl.cpp  ies91_parser_impl.h  ies95_parser_impl.cpp  ies95_parser_impl.h
src/utility/: CMakeLists.txt  file_reader.cpp  file_reader.h  random_numbers.cpp  random_numbers.h
